// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Search
    accessToken="a"
    artist={
        Object {
            "artistId": 1,
          }
    }
    searchResults={
        Object {
            "searchResults": Array [],
          }
    }
    submitUpdateArtist={[Function]}
    submitUpdateSearch={[Function]}
    user={
        Object {
            "userId": 1,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <form
          onSubmit={[Function]}
>
          <input
                    onChange={[Function]}
                    placeholder="Search for an artist"
                    value=""
          />
          <button>
                    Search
          </button>
</form>,
        <div>
          <p>
                    1. Search for an artist
          </p>
          <p>
                    2. Click TryIt to add that artists' top 5 songs to your Spotifive playlist
          </p>
          <p>
                    3. See new music in your Spotifive playlist in the Spotify app
          </p>
</div>,
      ],
      "className": "search",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              onChange={[Function]}
              placeholder="Search for an artist"
              value=""
/>,
            <button>
              Search
</button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "onChange": [Function],
              "placeholder": "Search for an artist",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Search",
            },
            "ref": null,
            "rendered": "Search",
            "type": "button",
          },
        ],
        "type": "form",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              1. Search for an artist
</p>,
            <p>
              2. Click TryIt to add that artists' top 5 songs to your Spotifive playlist
</p>,
            <p>
              3. See new music in your Spotifive playlist in the Spotify app
</p>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "1. Search for an artist",
            },
            "ref": null,
            "rendered": "1. Search for an artist",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "2. Click TryIt to add that artists' top 5 songs to your Spotifive playlist",
            },
            "ref": null,
            "rendered": "2. Click TryIt to add that artists' top 5 songs to your Spotifive playlist",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "3. See new music in your Spotifive playlist in the Spotify app",
            },
            "ref": null,
            "rendered": "3. See new music in your Spotifive playlist in the Spotify app",
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <form
            onSubmit={[Function]}
>
            <input
                        onChange={[Function]}
                        placeholder="Search for an artist"
                        value=""
            />
            <button>
                        Search
            </button>
</form>,
          <div>
            <p>
                        1. Search for an artist
            </p>
            <p>
                        2. Click TryIt to add that artists' top 5 songs to your Spotifive playlist
            </p>
            <p>
                        3. See new music in your Spotifive playlist in the Spotify app
            </p>
</div>,
        ],
        "className": "search",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                onChange={[Function]}
                placeholder="Search for an artist"
                value=""
/>,
              <button>
                Search
</button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "onChange": [Function],
                "placeholder": "Search for an artist",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Search",
              },
              "ref": null,
              "rendered": "Search",
              "type": "button",
            },
          ],
          "type": "form",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                1. Search for an artist
</p>,
              <p>
                2. Click TryIt to add that artists' top 5 songs to your Spotifive playlist
</p>,
              <p>
                3. See new music in your Spotifive playlist in the Spotify app
</p>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "1. Search for an artist",
              },
              "ref": null,
              "rendered": "1. Search for an artist",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "2. Click TryIt to add that artists' top 5 songs to your Spotifive playlist",
              },
              "ref": null,
              "rendered": "2. Click TryIt to add that artists' top 5 songs to your Spotifive playlist",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "3. See new music in your Spotifive playlist in the Spotify app",
              },
              "ref": null,
              "rendered": "3. See new music in your Spotifive playlist in the Spotify app",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Search matches the snapshot if there are search result 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Search
    accessToken="a"
    artist={
        Object {
            "artistId": 1,
          }
    }
    searchResults={
        Object {
            "searchResults": Array [
              Object {
                "id": 1,
                "name": "hi",
              },
            ],
          }
    }
    submitUpdateArtist={[Function]}
    submitUpdateSearch={[Function]}
    user={
        Object {
            "userId": 1,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <form
          onSubmit={[Function]}
>
          <input
                    onChange={[Function]}
                    placeholder="Search for an artist"
                    value=""
          />
          <button>
                    Search
          </button>
</form>,
        <div>
          <p>
                    Select an artist: 
          </p>
          <ul>
                    <ArtistCard
                              id={1}
                              name="hi"
                              selectArtist={[Function]}
                    />
          </ul>
</div>,
      ],
      "className": "search",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              onChange={[Function]}
              placeholder="Search for an artist"
              value=""
/>,
            <button>
              Search
</button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "onChange": [Function],
              "placeholder": "Search for an artist",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Search",
            },
            "ref": null,
            "rendered": "Search",
            "type": "button",
          },
        ],
        "type": "form",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Select an artist: 
</p>,
            <ul>
              <ArtistCard
                            id={1}
                            name="hi"
                            selectArtist={[Function]}
              />
</ul>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Select an artist: ",
            },
            "ref": null,
            "rendered": "Select an artist: ",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ArtistCard
                  id={1}
                  name="hi"
                  selectArtist={[Function]}
/>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "artistKey0",
                "nodeType": "function",
                "props": Object {
                  "id": 1,
                  "name": "hi",
                  "selectArtist": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "ul",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <form
            onSubmit={[Function]}
>
            <input
                        onChange={[Function]}
                        placeholder="Search for an artist"
                        value=""
            />
            <button>
                        Search
            </button>
</form>,
          <div>
            <p>
                        Select an artist: 
            </p>
            <ul>
                        <ArtistCard
                                    id={1}
                                    name="hi"
                                    selectArtist={[Function]}
                        />
            </ul>
</div>,
        ],
        "className": "search",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                onChange={[Function]}
                placeholder="Search for an artist"
                value=""
/>,
              <button>
                Search
</button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "onChange": [Function],
                "placeholder": "Search for an artist",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Search",
              },
              "ref": null,
              "rendered": "Search",
              "type": "button",
            },
          ],
          "type": "form",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Select an artist: 
</p>,
              <ul>
                <ArtistCard
                                id={1}
                                name="hi"
                                selectArtist={[Function]}
                />
</ul>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Select an artist: ",
              },
              "ref": null,
              "rendered": "Select an artist: ",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <ArtistCard
                    id={1}
                    name="hi"
                    selectArtist={[Function]}
/>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "artistKey0",
                  "nodeType": "function",
                  "props": Object {
                    "id": 1,
                    "name": "hi",
                    "selectArtist": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "ul",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
